# ewshdecay

./: ._hgg.f  CMakeLists.txt  ChangeScheme.F  Changelog.md  CxSMFunctions.F  LICENSE  Makefile  README.md  br.cd11  br.cd12  br.cd13  br.cd21  br.cd22  br.cd23  br.input  br.sm1  br.sm2  decayCxSM.F  fort.1  fort.1973310720  fort.2122392352  fort.240862864  fort.32766  fort.891627696  h2hh.f  hdecay.f  hdecay.in  hdecay_old.in  hsqsq.f  makefile  todo.txt
src/: ChangeScheme.F  CxSMFunctions.F  decayCxSM.F  hdecay.f
tests/: phase1.in  phase2.in  phase3.in  phase4.in  phase5.in  phase6.in  phase7.in  testCxSM.py
tests/out1/: br.input  br.rb11  br.rb12  br.rb13  br.rb21  br.rb22  br.rb23
tests/out2/: br.input  br.rd11  br.rd12  br.rd13
tests/out3/: br.cb11  br.cb12  br.cb13  br.cb21  br.cb22  br.cb23  br.cb31  br.cb32  br.cb33  br.input
tests/out4/: br.cd11  br.cd12  br.cd13  br.cd21  br.cd22  br.cd23  br.input
tests/out5/: br.cd11  br.cd12  br.cd13  br.cd21  br.cd22  br.cd23
tests/out6/: br.cd11  br.cd12  br.cd13  br.cd21  br.cd22  br.cd23  br.input
tests/out7/: Paramconversion.txt  br.cd11  br.cd12  br.cd13  br.cd21  br.cd22  br.cd23  br.input
tools/: readEWsHDECAY.py
